[gd_scene load_steps=11 format=2]

[ext_resource path="res://Scenes/Objects/Map/LevelDot.gd" type="Script" id=1]
[ext_resource path="res://Scenes/UI/UITheme.tres" type="Theme" id=2]
[ext_resource path="res://Sprites/Editor/Line.png" type="Texture" id=3]
[ext_resource path="res://Fonts/SuperTux-Medium.ttf" type="DynamicFontData" id=4]
[ext_resource path="res://Sprites/Worldmap/LevelDot/leveldot_green.png" type="Texture" id=5]
[ext_resource path="res://Sprites/Worldmap/LevelDot/leveldot_red.png" type="Texture" id=6]
[ext_resource path="res://Sprites/Worldmap/LevelDot/leveldot_invisible.png" type="Texture" id=7]

[sub_resource type="DynamicFont" id=3]
size = 18
outline_size = 2
outline_color = Color( 0, 0, 0, 1 )
use_mipmaps = true
use_filter = true
extra_spacing_top = 2
font_data = ExtResource( 4 )

[sub_resource type="SpriteFrames" id=1]
animations = [ {
"frames": [ ExtResource( 5 ) ],
"loop": true,
"name": "clear",
"speed": 5.0
}, {
"frames": [ ExtResource( 6 ) ],
"loop": true,
"name": "default",
"speed": 5.0
}, {
"frames": [ ExtResource( 7 ) ],
"loop": true,
"name": "invisible",
"speed": 5.0
} ]

[sub_resource type="DynamicFont" id=2]
size = 12
outline_size = 2
outline_color = Color( 0, 0, 0, 1 )
use_mipmaps = true
use_filter = true
extra_spacing_top = 2
font_data = ExtResource( 4 )

[node name="LevelDot" type="Node2D" groups=[
"popup",
"leveldot",
]]
script = ExtResource( 1 )

[node name="CanvasLayer" type="CanvasLayer" parent="."]
layer = 6

[node name="Popup" type="Popup" parent="CanvasLayer"]
visible = true
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -115.0
margin_top = -115.0
margin_right = 115.0
margin_bottom = 115.0
theme = ExtResource( 2 )

[node name="Panel" type="Panel" parent="CanvasLayer/Popup"]
anchor_right = 1.0
anchor_bottom = 1.0

[node name="VBoxContainer" type="VBoxContainer" parent="CanvasLayer/Popup/Panel"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 8.0
margin_top = 8.0
margin_right = -8.0
margin_bottom = -38.0

[node name="Label" type="Label" parent="CanvasLayer/Popup/Panel/VBoxContainer"]
margin_right = 214.0
margin_bottom = 20.0
custom_colors/font_color = Color( 0, 1, 1, 1 )
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
custom_constants/shadow_offset_x = 2
custom_constants/shadow_offset_y = 2
text = "Level Properties"
align = 1
valign = 1

[node name="Line2" type="TextureRect" parent="CanvasLayer/Popup/Panel/VBoxContainer"]
margin_top = 24.0
margin_right = 214.0
margin_bottom = 26.0
rect_min_size = Vector2( 0, 2 )
texture = ExtResource( 3 )
expand = true

[node name="Load" type="Button" parent="CanvasLayer/Popup/Panel/VBoxContainer"]
margin_top = 30.0
margin_right = 214.0
margin_bottom = 50.0
focus_mode = 1
action_mode = 0
enabled_focus_mode = 1
text = "Level to load"

[node name="Invisible" type="HBoxContainer" parent="CanvasLayer/Popup/Panel/VBoxContainer"]
margin_top = 54.0
margin_right = 214.0
margin_bottom = 74.0
custom_constants/separation = 16
alignment = 1

[node name="Label" type="Label" parent="CanvasLayer/Popup/Panel/VBoxContainer/Invisible"]
margin_left = 42.0
margin_right = 139.0
margin_bottom = 20.0
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
custom_constants/shadow_offset_x = 2
custom_constants/shadow_offset_y = 2
text = "Invisible"

[node name="CheckBox" type="CheckBox" parent="CanvasLayer/Popup/Panel/VBoxContainer/Invisible"]
margin_left = 155.0
margin_right = 171.0
margin_bottom = 20.0
focus_mode = 1
action_mode = 0
enabled_focus_mode = 1
align = 1

[node name="AutoPlay" type="HBoxContainer" parent="CanvasLayer/Popup/Panel/VBoxContainer"]
margin_top = 78.0
margin_right = 214.0
margin_bottom = 98.0
custom_constants/separation = 16
alignment = 1

[node name="Label" type="Label" parent="CanvasLayer/Popup/Panel/VBoxContainer/AutoPlay"]
margin_left = 34.0
margin_right = 148.0
margin_bottom = 20.0
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
custom_constants/shadow_offset_x = 2
custom_constants/shadow_offset_y = 2
text = "Auto play"

[node name="CheckBox" type="CheckBox" parent="CanvasLayer/Popup/Panel/VBoxContainer/AutoPlay"]
margin_left = 164.0
margin_right = 180.0
margin_bottom = 20.0
focus_mode = 1
action_mode = 0
enabled_focus_mode = 1
align = 1

[node name="Button" type="Button" parent="CanvasLayer/Popup/Panel"]
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = -36.0
margin_bottom = -4.0
rect_min_size = Vector2( 0, 32 )
focus_mode = 1
action_mode = 0
enabled_focus_mode = 1
text = "OK"

[node name="Line" type="TextureRect" parent="CanvasLayer/Popup/Panel/Button"]
anchor_right = 1.0
margin_top = -2.0
rect_min_size = Vector2( 0, 2 )
texture = ExtResource( 3 )
expand = true

[node name="BottomName" type="Label" parent="CanvasLayer"]
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = -30.0
custom_fonts/font = SubResource( 3 )
custom_colors/font_color = Color( 1, 1, 0.6, 1 )
text = "No Level Assigned"
align = 1

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
frames = SubResource( 1 )

[node name="DisplayName" type="Label" parent="."]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -92.5
margin_top = -43.0
margin_right = 92.5
custom_fonts/font = SubResource( 2 )
custom_colors/font_color = Color( 1, 1, 0.6, 1 )
text = "No Level Assigned"
align = 1
valign = 1
autowrap = true
clip_text = true
[connection signal="pressed" from="CanvasLayer/Popup/Panel/VBoxContainer/Load" to="." method="_on_Load_pressed"]
[connection signal="pressed" from="CanvasLayer/Popup/Panel/Button" to="." method="_on_Button_pressed"]
